--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -302,7 +302,7 @@ nav a:hover {
     background: linear-gradient(rgb(28, 23, 78),rgb(26, 26, 93));
     animation: cercleanim2 10s ease-in-out infinite alternate; 
     /* margin-left: -25rem; */
-    background-image: url(img/femmecasiste.webp);
+    background-image: url(femmecasiste.webp);
     background-position: 50%;
     background-size: 45rem;
     background-repeat: no-repeat;
