--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -281,7 +281,7 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 4rem;
+    /* padding-top: 4rem; */
 }
 
 .cercle1 {
