--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #1e6ce1;
-    --secondary-color: rgb(25, 38, 100);
+    --primary-color: #00bdff;
+    --secondary-color: #f77500;
     --accent-color: #e07223;
     --font-family: Arial, sans-serif;
 }
@@ -30,7 +30,7 @@ body {
 header {
     position: fixed;
     display: flex;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -41,8 +41,8 @@ header {
 header img {
     height: 65px;
     width: 6rem;
-    background: #ffffff;
     border-bottom-right-radius: 10px;
+    padding-left: 20px;00
 }
 nav {
     display: flex;
@@ -255,18 +255,19 @@ nav a:hover {
     padding-top: 65px;
     gap: 25rem;
     width: 100%;
+    background-color: #e07223;
 }
 .writFirstDiv {
     margin-left: -12rem;
     font-size: 1.8rem;
 }
 .writFirstDiv h2 {
-    border-bottom: 3px solid rgb(255, 204, 0);
+    border-bottom: 3px solid var(--secondary-color);
 }
 .writFirstDiv button {
     box-shadow: 0px 0px 20px rgb(129, 129, 129);
     border: none;
-    border-bottom: 3px solid rgb(255, 204, 0);
+    border-bottom: 3px solid var(--secondary-color);
     font-weight: bold;
     border-radius: 6px;
     padding: 20px 30px;
@@ -290,7 +291,7 @@ nav a:hover {
     width: 25rem;
     height: 25rem;
     background: var(--secondary-color);
-    background: linear-gradient(rgb(24, 26, 101),rgb(255, 204, 0));
+    background: linear-gradient(rgb(24, 26, 101),rgb(255, 170, 0));
     animation: cercleanim 10s ease-in-out infinite alternate; 
 }
 
@@ -317,7 +318,7 @@ nav a:hover {
 }
 /* section metier article */
 .metierArticle {
-    background-color: #192664;
+    background-color: var(--primary-color);
     color: #fff;
     display: flex;
     align-items: center;
@@ -329,6 +330,8 @@ nav a:hover {
     box-shadow: 2px 2px 17px var(--secondary-color);
     padding-bottom: 3rem;
     margin: 0;
+    border-top: none;
+    box-shadow: none;
 }
 .svgsec{
     position: relative;
@@ -336,7 +339,7 @@ nav a:hover {
 svg{
     width: 50px;
     height: 50px;
-    color: rgb(255, 230, 0);
+    color: var(--secondary-color);
     position: absolute;
     right: 225px;
     bottom: 25px;
@@ -599,6 +602,7 @@ svg{
     cursor: pointer;
     z-index: 50;
     color: #fff;
+    border-top-right-radius: 35px;
 }
 .divProSuivi div:hover {
     background-image: url(bgdivPro.jpg);
@@ -860,7 +864,7 @@ footer img {
 .line{
     width: 40px;
     height: 4px;
-    background-color: #FFE600;
+    background-color: var(--secondary-color);
 }
 .line i {
     cursor: pointer;
@@ -877,6 +881,7 @@ footer img {
     position: relative;
     width: fit-content;
 }
+
 .GCP img{
     position: absolute;
     width: 560px;
@@ -884,6 +889,7 @@ footer img {
     top: 25px;
     filter: grayscale(100%) brightness(0%);
 }
+
 .untogglescroll{
     overflow: hidden;
 }
