--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -42,7 +42,7 @@ header img {
     height: 65px;
     width: 6rem;
     border-bottom-right-radius: 10px;
-    padding-left: 20px;00
+    padding-left: 20px;
 }
 nav {
     display: flex;
@@ -727,6 +727,71 @@ svg{
 .havequesitonsection button:hover {
     transform: scaleX(1.09);
 }
+ /* location section  */
+ .mapsvlleSection {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid;
+    flex-direction: column;
+    padding: 1rem;
+}
+.mapsvlleSection button {
+    padding: 1rem;
+    border-radius: none;
+    background-color: #101213;
+    color: white;
+    font-size: larger;
+    border: none;
+    margin: 0px 15px;
+    padding: 15px 25px;
+}
+.locationEtVilleInfo {
+    display: flex;
+    align-items: self-start;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    border:  1px solid;
+    padding: 1rem;
+    height: 50vh;
+    width: 80vw;
+}
+.warningAndlocalinfo {
+    display: flex;
+    align-items: self-end;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+} 
+.warning {
+    display: flex;
+    align-items: end;
+    justify-content: end;
+}
+.Localistionchoisi {
+    /* width: 50%; */
+    border:  1px solid;
+    height: 100%;
+    width: 50%;
+}
+.titleLocal {
+    display: flex;
+    /* align-items: center; */
+    justify-content: start;
+    flex-direction: column;
+    border:  1px solid;
+    width: 50%;
+    height: 100%;
+    font-weight: bold;
+    font-size: 1.6rem;
+}
+.titleLocal p {
+    margin-top: -20px;
+}
+.titleLocal h3,p {
+    padding-left: 3rem;
+}
 /* footer */
 footer {
     width: 100%;
@@ -830,7 +895,7 @@ footer img {
 }
    
 ::-webkit-scrollbar-thumb {
-    background: #192664; 
+    background: #101213; 
     border-radius: 10px;
 }
   
