--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -727,75 +727,92 @@ svg{
 .havequesitonsection button:hover {
     transform: scaleX(1.09);
 }
- /* location section  */
- /* .mapsvlleSection {
+/* location section */
+.mapsvlleSection {
     display: flex;
-    align-items: center;
     justify-content: center;
-    border: 1px solid;
+    align-items: center;
     flex-direction: column;
-    padding: 1rem;
+    padding: 20px;
+    background-color: #f8f8f8; /* Set your desired background color */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
     height: 70vh;
+    border: 1px solid;
+    font-size: 1.2rem;
 }
-.mapsvlleSection button {
-    padding: 1rem;
-    border-radius: none;
-    background-color: #101213;
-    color: white;
-    font-size: larger;
-    border: none;
-    margin: 0px 15px;
+.mapsvlleSection h2 {
+    border-bottom: #333 2px solid;
+}
+.buttonVilles button {
+    margin: 5px;
     padding: 15px 25px;
+    background-color: #3498db; /* Set your desired button background color */
+    color: #fff; /* Set text color */
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: .5s;
+}
+.buttonVilles button:hover {
+    background-color: #e5690a;
+    transform: scale(1.1);
 }
 .locationEtVilleInfo {
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
-    flex-direction: row-reverse;
-    border:  1px solid;
+    border: 1px solid;
+    width:80vw;
+    margin-top: 20px;
+    height: 60%;
     padding: 1rem;
     height: 100%;
-    width: 80vw;
+    background-color: #ebe7ea;
 }
-.warningAndlocalinfo {
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-    /* align-items: center;
-    flex-direction: column;
-    width: 100%; */
-/* } 
-.warningAndlocalinfo h3 {
-    display: flex;
-    align-items: center;
-    justify-content: start;
+.fa-city {
+    /* border: 2px solid; */
+    position: absolute;
+    padding: 20px;
+    margin-top: 21rem;
+    margin-right: 80rem;
+    opacity: .2;
+    font-size: 6em;
 }
-/* .warning {
-    display: flex;
-    align-items: end;
-    justify-content: end;
-} 
 .Localistionchoisi {
-    border:  1px solid;
-    height: 100%;
-    width: 50%;
-}
-.titleLocal {
+    height: 85%;
     display: flex;
-    justify-content: start;
-    flex-direction: column;
-    border:  1px solid;
-    width: 50%;
-    height: 100%;
-    font-weight: bold;
-    font-size: 1.6rem;
-} 
-.titleLocal p {
-    margin-top: -20px;
+    align-items: center;
+    justify-content: center;
 }
-.titleLocal h3,p {
-    padding-left: 3rem;
-} */
+.villeNomMaps {
+    border-bottom: 2px var(--secondary-color) solid;
+}
+.Localistionchoisi iframe {
+    border: 2px solid #3498db; /* Match button color for consistency */
+    border-radius: 5px;
+    height: 100%;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.warningAndlocalinfo {
+    display: flex;
+    flex-direction: column;
+    align-items: self-start;
+    padding-left: 1rem;
+    justify-content: start;
+    height: 100%;
+    width: 100%;
+}
+
+.warningAndlocalinfo h3 {
+    font-size: 2.1rem;
+    margin-bottom: -5px;
+    color: #333; /* Set your desired text color */
+}
 
 /* footer */
 footer {
