--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -180,8 +180,8 @@ nav a:hover {
     transform: scale(1.2);
 }
 .imgLogoPort {
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 100px;
 }
 .imgAndRmv {
     display: flex;
@@ -237,7 +237,7 @@ nav a:hover {
 } 
 .AbotAnddivLInfos.social i{
     /* cursor: pointer; */
-    font-size:2rem;
+    font-size:1.7rem;
     padding-left: 2rem;
     transition: .5s;
 }
@@ -715,7 +715,7 @@ svg{
     padding: 0;
 }
 .havequesitonsection span {
-    color: #FFE600;
+    color: var(--accent-color);
 }
 .havequesitonsection button {
     padding: 15px 25px;
@@ -738,7 +738,6 @@ svg{
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
     height: 70vh;
-    border: 1px solid;
     font-size: 1.2rem;
 }
 .mapsvlleSection h2 {
@@ -922,7 +921,7 @@ footer img {
 }
   
 ::-webkit-scrollbar-thumb:hover {
-    background: #FFE600; 
+    background: var(--accent-color); 
 }
 .Menu-all ul li{
     display: flex;
@@ -948,6 +947,9 @@ footer img {
 .Socialss2 h3{
     margin: 0;
 }
+.Socialss2 i {
+    transition: .5s;
+}
 .line{
     width: 40px;
     height: 4px;
@@ -955,6 +957,10 @@ footer img {
 }
 .line i {
     cursor: pointer;
+}
+.Socialss2 i:hover {
+    transform: rotate(-90deg);
+    color: rgb(27, 32, 164);
 }
 .GCP{
     display: flex;
