--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -733,12 +733,17 @@ svg{
     background-color: #f8f8f8; /* Set your desired background color */
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
-    height: 70vh;
-    border: 1px solid;
+    height: fit-content;
     font-size: 1.2rem;
 }
 .mapsvlleSection h2 {
     border-bottom: #333 2px solid;
+}
+.buttonVilles{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .buttonVilles button {
     margin: 5px;
@@ -754,6 +759,9 @@ svg{
 .buttonVilles button:hover {
     background-color: #e5690a;
     transform: scale(1.1);
+}
+.active{
+    background-color: #e5690a !important;
 }
 .locationEtVilleInfo {
     display: flex;
@@ -779,6 +787,7 @@ svg{
 }
 .Localistionchoisi {
     height: 85%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -787,9 +796,10 @@ svg{
     border-bottom: 2px var(--secondary-color) solid;
 }
 .Localistionchoisi iframe {
-    border: 2px solid #3498db; /* Match button color for consistency */
+    /* border: 2px solid #3498db; */
     border-radius: 5px;
-    height: 100%;
+    height: 50vh;
+    width: 100%;
     border-top-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -1142,6 +1152,9 @@ footer img {
     .locationEtVilleInfo{
         flex-direction: column-reverse;
     }
+    .Localistionchoisi iframe{
+        width: 100%;
+    }
 }
 @media all and (min-width: 480px) and (max-width: 820px) { 
     nav{
@@ -1262,6 +1275,7 @@ footer img {
     .locationEtVilleInfo{
         flex-direction: column-reverse;
     }
+
 }
 
 /* for mr ahmed sami*/
@@ -1343,6 +1357,7 @@ footer img {
     .locationEtVilleInfo{
         flex-direction: column-reverse;
     }
+
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) { 
     .articles{
