--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -810,7 +810,7 @@ svg{
     align-items: self-start;
     padding-left: 1rem;
     justify-content: start;
-    height: 100%;
+    height: 50vh;
     width: 100%;
 }
 
@@ -1155,6 +1155,9 @@ footer img {
     .Localistionchoisi iframe{
         width: 100%;
     }
+    .warningAndlocalinfo {
+        height: 100%;
+    }
 }
 @media all and (min-width: 480px) and (max-width: 820px) { 
     nav{
@@ -1275,6 +1278,9 @@ footer img {
     .locationEtVilleInfo{
         flex-direction: column-reverse;
     }
+    .warningAndlocalinfo {
+        height: 100%;
+    }
 
 }
 
@@ -1356,6 +1362,9 @@ footer img {
     }
     .locationEtVilleInfo{
         flex-direction: column-reverse;
+    }
+    .warningAndlocalinfo {
+        height: 100%;
     }
 
 }
