--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -768,7 +768,7 @@ svg{
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid;
+    /* border: 1px solid; */
     width:80vw;
     margin-top: 20px;
     height: 60%;
