--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -31,6 +31,7 @@ header {
     position: fixed;
     display: flex;
     background-color: var(--primary-color);
+    background-color: #333dcf;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -58,6 +59,7 @@ nav a {
     transition: ease 0.3s;
     position: relative;
     padding-left: 5px;
+    letter-spacing: 1.5px;
 }
 
 nav a:hover {
@@ -212,14 +214,15 @@ nav a:hover {
     justify-content: space-around; /* Adjust as needed */
 }
 .imgGrid img {
-    max-width: 30%; /* Adjust as needed */
+    max-width: 100%; /* Adjust as needed */
     margin: 10px; /* Add some space between images */
     margin-left: 15px;
     width: 5rem;
     border-radius: 10px;
-    height: 5rem;
+    height: 4.8rem;
     box-shadow: 0 0 30px rgb(96, 95, 95);
     transition: .5s;
+    max-width: 100%;
 }
 .imgGrid img:hover {
     transform: scale(1.05);
@@ -247,7 +250,6 @@ nav a:hover {
 /* HomeFirstSection */
 .GcpButton {
     width: 300px;
-    background-color: #333;
 }
 .HomeFirstSection {
     color: #ffffff;
@@ -288,7 +290,6 @@ nav a:hover {
     justify-content: center;
     /* padding-top: 4rem; */
 }
-
 .cercle1 {
     margin: 20px 0px;
     border-radius: 20% 50% 10% 50%;
@@ -298,14 +299,6 @@ nav a:hover {
     background: linear-gradient(rgb(24, 26, 101),rgb(255, 170, 0));
     animation: cercleanim 10s ease-in-out infinite alternate; 
 }
-
-/* .hidden{
-    opacity: 0;
-    transition: all 1.7s;
-}
-.show{
-    opacity: 1;
-} */
 .cercle2 {
     margin: 20px 0px;
     border-radius: 20% 50% 10% 50%;
@@ -323,6 +316,7 @@ nav a:hover {
 /* section metier article */
 .metierArticle {
     background-color: var(--primary-color);
+    background-color: #333dcf;
     color: #fff;
     display: flex;
     align-items: center;
@@ -349,7 +343,6 @@ svg{
     bottom: 25px;
     /* opacity: 0.8; */
 }
-
 @keyframes cercleanim {
     0% {
         border-radius: 100% 60% 95% 100%;
@@ -384,7 +377,6 @@ svg{
         border-radius: 100% 50% 100% 100%;
     }
 }
-
 /* gallery div */
 .galleryDiv {
     background-color: #f1f5f8;
@@ -477,7 +469,6 @@ svg{
     height: 100%;
     object-fit: cover;
 }
-
 /* review */
 .reviewsSec {
     display: flex;
@@ -530,7 +521,6 @@ svg{
     padding: 2rem;
     margin:0  30px;
     max-width: 70%;
-
 }
 .smallContainerReview {
     height: 100%;
@@ -591,7 +581,6 @@ svg{
     gap: 2rem;
     margin: -15px 0 8rem 0;
 }
-
 .divProSuivi div{
     display: flex;
     align-items: center;
@@ -617,7 +606,6 @@ svg{
     backdrop-filter: opacity(10%); /* Set the opacity of the background using backdrop-filter */
     transform: scale(1.09);
 }
-
 .divProSuivi div p {
     margin-top: -10px;
     font-size: .9rem;
@@ -632,7 +620,6 @@ svg{
     border-bottom: #64646438 1px solid;
     padding-bottom: 50px;
 }
-
 .articles img {
     width: 100%;
     height: 19rem;
@@ -663,7 +650,6 @@ svg{
     border-left: 3px solid var(--secondary-color);
     height: auto;
 }
-
 .article .date {
     border: 2px solid gray;
     padding: 3px 7px;
@@ -717,9 +703,6 @@ svg{
     height: 100%;
     z-index: 1;
     padding: 0;
-}
-.havequesitonsection span {
-    color: var(--accent-color);
 }
 .havequesitonsection button {
     padding: 15px 25px;
@@ -815,13 +798,11 @@ svg{
     height: 50vh;
     width: 100%;
 }
-
 .warningAndlocalinfo h3 {
     font-size: 2.1rem;
     margin-bottom: -5px;
     color: #333; /* Set your desired text color */
 }
-
 /* footer */
 footer {
     width: 100%;
@@ -876,7 +857,6 @@ footer img {
     width: 100%;
     height: 100vh;
 }
-
 ::-webkit-scrollbar {
     width: 5px;
 }
@@ -884,7 +864,6 @@ footer img {
     box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
 }
-   
 ::-webkit-scrollbar-thumb {
     background: #101213; 
     border-radius: 10px;
@@ -953,7 +932,6 @@ footer img {
     transform: translate(-50%, -50%);
     filter: grayscale(100%) brightness(0%);
 }
-
 .untogglescroll{
     overflow: hidden;
 }
@@ -1018,16 +996,11 @@ footer img {
     #Menu2{
         width: 21rem ;
     }
-    /* .havequesitonsection {
-        backdrop-filter: blur(5px);
-    } */
     .havequesitonsection div {
         padding-left: 0;
-        /* padding: 10px; */
         border: none;
         border-radius: 10px;
         filter: none; /* Vous pouvez ajuster la valeur de "5px" selon le flou souhaité */
-        /* backdrop-filter: blur(10px); */
     }
     .HomeFirstSection {
         flex-direction: column;
@@ -1059,8 +1032,6 @@ footer img {
         animation: cercleanim 10s ease-in-out infinite alternate; 
     }
     .cercle2 {
-        /* width: 23.8rem;
-        height: 24rem; */
         width: 93%;
         height: 90%;
     }
@@ -1149,18 +1120,11 @@ footer img {
     .maps{
         flex-wrap: wrap;
     }
-    /* .havequesitonsection {
-        backdrop-filter: blur(5px);
-    } */
     .havequesitonsection div {
         padding-left: 0;
-        /* color: #000000; */
-        /* padding: 10px; */
         border: none;
         border-radius: 10px;
-        /* opacity: 1.3; */
         filter: none; /* Vous pouvez ajuster la valeur de "5px" selon le flou souhaité */
-        /* backdrop-filter: blur(10px); */
     }
     .HomeFirstSection {
         flex-direction: column;
@@ -1242,9 +1206,7 @@ footer img {
     .warningAndlocalinfo {
         height: 100%;
     }
-
 }
-
 /* for mr ahmed sami*/
 @media all and (min-width: 547px) and (max-width: 608px) { 
     .ReviewInfo h3{
@@ -1256,8 +1218,6 @@ footer img {
         display: none;
     }
 }
-
-
 @media all and (min-width: 820px) and (max-width: 1024px) { 
     nav{
         display: none;
@@ -1325,7 +1285,6 @@ footer img {
     .warningAndlocalinfo {
         height: 100%;
     }
-
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) { 
     .articles{
@@ -1344,4 +1303,6 @@ footer img {
         gap: 16rem;
     }
 }
-
+.GcpButton {
+    background-color: #eaf2fe;
+}
