--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -38,6 +38,7 @@ header {
     box-sizing: border-box;
     padding: 0 20px 0 0;
     z-index: 98;
+    height: 3rem;
 }
 header img {
     height: 65px;
@@ -808,11 +809,13 @@ footer {
     width: 100%;
     height: 100%;
     background: #8d8989;
+    color: #eaf2fe;
     display: flex;
     align-items: center;
     justify-content: center;
     background: linear-gradient( to bottom,rgb(255, 255, 255),rgb(25, 38, 100,50%));
     padding-bottom: 3rem;
+    background: transparent radial-gradient(37vmax 15vmax at 2% 100%,  rgb(37, 61, 178) 0%, #222121 100%) 0% 0% no-repeat padding-box;
 }
 footer h1 {
     font-size: 22px;
