--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -317,7 +317,7 @@ nav a:hover {
 /* section metier article */
 .metierArticle {
     background-color: var(--primary-color);
-    background-color: #333dcf;
+    background-color: #cf337c;
     color: #fff;
     display: flex;
     align-items: center;
