--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -817,11 +817,13 @@ footer {
     padding-bottom: 3rem;
     background: transparent radial-gradient(37vmax 15vmax at 2% 100%,  rgb(37, 61, 178) 0%, #222121 100%) 0% 0% no-repeat padding-box;
     padding-top: 2rem;
+    letter-spacing: 2px;
 }
 footer h1 {
     font-size: 22px;
     border-bottom: 5px solid rgb(25, 38, 100);
-    width: 10rem;
+    width: fit-content;
+    padding-bottom: 20px;
 }
 footer img {
     height: 7rem;
