--- a/styleEspaceEtude2.css
+++ b/styleEspaceEtude2.css
@@ -1,6 +1,8 @@
 * {
-    /* border: 1px solid ; */
+    /* border: 1px solid red ; */
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 
@@ -24,7 +26,16 @@ header {
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
-    background-color: rgb(235, 233, 233);
+    background-color: rgb(0, 0, 0);
+    padding: 0 15%;
+    color: rgb(255, 255, 255);
+}
+header div {
+    /* background-color: rebeccapurple; */
+    /* flex-direction: column; */
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 header i {
     font-size: larger !important;
@@ -37,27 +48,59 @@ header ul {
     display: flex;
     justify-content: space-between;
     /* background-color: red;    */
+    /* width: 100%; */
 }
 header ul li {
     /* padding: 0px 20px; */
     margin: 0px 20px;
     list-style: none;
-    border-bottom: 2px solid orange;
+    border-bottom: 2px solid rgb(6, 64, 210);
     font-weight: bold;
     font-size: larger;
+    display: flex;
+    align-items: center;
 }
+
+.Headimg {
+    padding: 0 !important;   
+    position: relative;
+    background-size: cover;
+    overflow: hidden;
+    width: 50%;
+    display: inline-block;
+}
+.secheadDiv1  {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    width: 60%;
+    border: 0 !important;
+    outline: none !important;
+    padding: 40px 50px;
+}
+.Headimg img {
+    filter:  brightness(.8);
+    position: relative;  
+    width: 100%;
+    aspect-ratio: 2/1; 
+    object-fit: cover; 
+}
+.Headimg .overlayH {
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,0.9360994397759104) 0%, rgba(255,255,255,0) 87%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;   
+}
+.secHeadimg {
+    padding: 0 15%;
+}
+
+
 body {
-    margin: 0 10% !important;
     height: 100vh;
-    }
-
-
-* {
-    padding: 0;
-    margin: 0;
-    /* border: 1px solid; */
-    box-sizing: border-box;
-}    
+}   
 .grid-container {
     display: grid !important;
     grid-template-columns: 1fr 1fr ;
@@ -91,8 +134,7 @@ section {
     margin: 20px auto;
     flex-direction: row;
     width: 100%;
-    /* background-color: blueviolet; */
-    padding: 5px;
+    padding: 0 15%;
     justify-content: space-between;
 }
 section .div1 {
@@ -102,11 +144,13 @@ section .div1 {
 .div1 i {
     font-size: 15px;
     padding: 10px;
-    background-color: black;
-    color: rgb(36, 30, 210);
+    background-color: rgb(0, 0, 0);
+    color: rgb(6, 64, 210);
     border-radius: 100%;
     display: inline;
     margin-right: 10px;
+    width: 33px;
+    aspect-ratio: 1/1;
 }
 .div1 p {
     display: inline;
@@ -128,9 +172,11 @@ section .div1 {
     font-weight: bold;
     font-size: larger;
     display: none ;
-    transform: all 0.3s;
+    transition: all 0.3s;
     background-color: rgb(235, 233, 233);
-
+}
+#afficheMenuPhone {
+    transition: all 0.3s;
 }
 .menuPhone ul {
     display: flex;
@@ -174,6 +220,33 @@ section .div1 {
     header i {
         display: flex !important;
         font-size: 30px !important;
+        align-items: center;
+    }
+    .secHeadimg  {
+        flex-direction: row;
+        height: 120px;
+        padding: 0;
+    }
+    .secHeadimg img {
+        height: 100%;
+    }
+    .secHeadimg  div h2 {
+        font-size: 20px;
+    }
+    .secHeadimg  div {
+        padding: 15px;
+    }
+    section {
+        padding: 0;
+    }
+    .div1 div {
+        padding: 7px 0;
+    }
+    /* .div1 i {
+        width: 200px !important;
+    } */
+    footer {
+        padding: 15px !important;
     }
 }
 
@@ -198,3 +271,10 @@ section .div1 {
   .card:hover .background-overlay {
     background: none;
   }
+
+footer {
+    padding: 50px 15%;
+    height: 200px;
+    color: aliceblue;
+    background-color: black;
+}
