--- a/styleLoginEspaceEtud.css
+++ b/styleLoginEspaceEtud.css
@@ -58,7 +58,7 @@ body {
     width: 60vw;
     padding: 20px;
     background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
     text-align: start;
     display: flex;
     align-items: center;
@@ -132,3 +132,23 @@ label[for="password"] {
     color: red;
     font-size: 0.9em;
   }
+
+  /* @media (max-width:700px) {
+    
+    .container {
+      flex-direction: column;
+      background-image: url(assets/ForkliftContainerBig1.jpg) !important;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+    }
+    .login-container {
+      background: transparent;
+    }
+    .FirstNes {
+      display: none;
+    }
+    .container div {
+      width: 100%;
+    }
+  } */
